<resources>
    <string name="app_name">Department App</string>
    <string name="ae_dashboard_title">APCPDCL DepartmentApp</string>
    <string name="tariff_plan">Tariff Plan 2022-23</string>
    <string name="default_notification_channel_id">default</string>
    <string name="action_changepassword">Change Password</string>
    <string name="action_logout">Logout</string>
    <string name="kvah">KVAH</string>
    <string name="kvah_exp">EXP KVAH</string>
    <string name="kwh_exp">EXP KWH</string>
    <string name="dctype">Disconnection Type</string>
    <string name="dckwh">KWH</string>
    <string name="mandatory">mandatory fields</string>
    <string name="details"><font color="red">V</font>-Payment <font color="red">V</font>erified\n<font color="red">P</font>-<font color="red">P</font>ending for Verification\n<font color="red">D</font>-<font color="red">D</font>isconnected\n<font color="red">N</font>-Unable(<font color="red">N</font>ot able) to Disconnect.</string>
    <string name="update_profile">Update Profile</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="update">Update</string>
    <string name="section_name">Section Name</string>
    <string name="no_internet">This feature requires internet connection. Please check your internet settings and try again.</string>
    <string name="err_session">Unable to create session.</string>
    <string name="no_geocoder_available">No Geo coder available</string>
    <string name="turn_on_location">Turn On Location</string>
    <string name="ccc_complaints">CCC\nComplaints</string>
    <string name="err_enter_meter_change_date">Meter Change Date cannot be empty.</string>
    <string name="err_enter_service_number">Service Number cannot be empty.</string>
    <string name="err_enter_valid_service_number">Enter valid Service Number.</string>
    <string name="err_enter_old_meter_number">Old Meter number cannot be empty.</string>
    <string name="err_enter_old_meter_kwh_reading">Old Meter KWH reading cannot be empty.</string>
    <string name="err_enter_old_meter_kwh_exp_reading">Old Meter EXP KWH reading cannot be empty.</string>
    <string name="err_enter_old_meter_kvah_exp_reading">Old Meter EXP KVAH reading cannot be empty.</string>
    <string name="err_enter_old_meter_kvah_reading">Old Meter KVAH reading caannot be empty.</string>
    <string name="err_enter_valid_old_meter_number">Please verify the Old meter number in the meter change slip.</string>
    <string name="err_old_meter_number_lees_than_five">Old Meter Number should be atleast 5 digits length.</string>
    <string name="err_select_meter_change_date_first">Please Select Meter Change Date first.</string>
    <string name="err_final_reading_cant_be_less_kwh">Old meter final reading cannot be less than old meter closing reading(KWH).</string>
    <string name="err_final_reading_cant_be_less_kvah">Old meter final reading cannot be less than old meter closing reading(KVAH).</string>
    <string name="err_final_reading_cant_be_less_exp_kwh">Old meter final reading cannot be less than old meter closing reading(EXP KWH).</string>
    <string name="err_final_reading_cant_be_less_exp_kvah">Old meter final reading cannot be less than old meter closing reading(EXP KVAH).</string>
    <string name="err_select_meter_change_reason">Please Select Meter change reason.</string>
    <string name="err_select_irda_flag">Please Select IRDA Flag.</string>
    <string name="err_select_new_meter_make">Please Select New Meter Make.</string>
    <string name="err_select_new_meter_type">Please Select New Meter Type.</string>
    <string name="err_select_new_meter_phase">Please Select New Meter Phase.</string>
    <string name="err_meter_change_slip_number_cant_be_empty">Meter Change Slip Number cannot be empty.</string>
    <string name="err_new_meter_number_cant_be_empty">New Meter number caannot be empty.</string>
    <string name="err_valid_new_meter_number">New Meter number should be atleast 5 digits length.</string>
    <string name="err_enter_valid_new_meter_number">New Meter number caannot be same as Old Meter number.</string>
    <string name="err_new_meter_make_cant_be_empty">New Meter Make caannot be empty.</string>
    <string name="err_new_meter_capacity_cant_be_empty">New Meter Capacity caannot be empty.</string>
    <string name="err_new_meter_class_cant_be_empty">New Meter Class caannot be empty.</string>
    <string name="err_meter_digits_cant_be_empty">Meter Digits caannot be empty.</string>
    <string name="err_enter_meter_manufacture_date">Meter Manufacture Date cannot be empty.</string>
    <string name="err_enter_meter_reading_kwh">New Meter KWH reading be empty.</string>
    <string name="err_enter_meter_reading_kvah">New Meter KVAH reading caannot be empty.</string>
    <string name="err_enter_meter_mf">New Meter MF caannot be empty.</string>
    <string name="err_enter_valid_meter_mf">MF caannot be zero.</string>
    <string name="err_enter_meter_seal_one">MRT Seal-1 cannot be empty.</string>
    <string name="err_enter_meter_seal_tc">Meter Terminal Cover Seal cannot be empty.</string>
    <string name="err_enter_meter_seal_two">MRT Seal-2 cannot be empty.</string>
    <string name="err_enter_meter_change_reason">Please Enter meter change reason.</string>
    <string name="enter_meter_change_reason">Enter Meter Change reason</string>
    <string name="enter_lc_reason">Enter Reason for LC </string>
    <string name="meter_change_slip_no">Meter Change Slip No</string>
    <string name="meter_change_date">Meter Change Date</string>
    <string name="old_meter_number">Old Meter Number</string>
    <string name="final_reading_kwh">(Final Reading)KWH</string>
    <string name="final_reading_kvah">(Final Reading)KVAH</string>
    <string name="final_reading_exp_kwh">(Final Reading) EXP KWH</string>
    <string name="final_reading_exp_kvah">(Final Reading) EXP KVAH</string>
    <string name="changed_by">Changed By</string>
    <string name="logged_in_user">Logged in user</string>
    <string name="irda">IRDA</string>
    <string-array name="meter_make">
        <item>--Select--</item>
        <item>AEW</item>
        <item>ANSU</item>
        <item>AVENIER</item>
        <item>AVON</item>
        <item>CONTI</item>
        <item>DEVOLUTED</item>
        <item>DHANA ENRG</item>
        <item>ECE</item>
        <item>ELSTER</item>
        <item>ELYMER</item>
        <item>GENUS</item>
        <item>HAVELLS</item>
        <item>HE</item>
        <item>HOLLEY</item>
        <item>HPL</item>
        <item>ICSA</item>
        <item>L AND G</item>
        <item>LNT</item>
        <item>NPL</item>
        <item>OMNIAGATE</item>
        <item>PL EL PWR</item>
        <item>PT</item>
        <item>SCHNEIDER</item>
        <item>SECURE</item>
        <item>SMS</item>
        <item>TTL</item>
        <item>UE</item>
        <item>UTL</item>
        <item>VE</item>
        <item>VISION TEK</item>
        <item>OTHERS</item>
    </string-array>
    <string name="meter_type">Meter Type</string>
    <string name="_2_electron">2-ELECTRON</string>
    <string name="new_meter_no">New Meter No</string>
    <string name="meter_phase">Meter Phase</string>
    <string name="meter_capacity">Meter Capacity</string>
    <string name="meter_class">Meter Class</string>
    <string name="meter_description">Meter Description</string>
    <string name="meter_digits">Meter Digits</string>
    <string name="meter_mfg_date_in_ddmmyy_format_eg_100314">Meter Mfg Date (In ddmmyy format)eg:100314</string>
    <string name="initial_reading_kwh">(Initial Reading)KWH</string>
    <string name="initial_reading_kvah">(Initial Reading)KVAH</string>
    <string name="mf">MF</string>
    <string name="meter_cover_seals_mrt_seals_are_mandatory">Meter Cover Seals (MRT) ( * Seals are mandatory)</string>
    <string name="seal_1">*Seal 1</string>
    <string name="meter_tc_seals">Meter TC Seals</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="you_pressed_cancel">You pressed Cancel!</string>
    <string name="no_internet_msg">Internet connection not available, Do you want to proceed Offline?</string>
    <string name="pending_o_m_list">Pending Meter Changes</string>
    <string name="delete_list">Delete Meter Changes</string>
    <string name="agl_services_geo_tagging">AGL Services GEO Tagging</string>
    <string name="sub_station_operations">Sub-Station\nCo-ordinates</string>
    <string name="meter_change_requests">Meter Change Requests</string>
    <string name="str_operate_dc_list">Operate DC-List</string>
    <string name="meter_change_operations">Meter Change Requests</string>
    <string name="rejected_by_aao_list">Exception List</string>
    <string name="delete_meter_change">Delete Meter Changes</string>
    <string name="meter_changes_list">METER CHANGES LIST</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="no_data_found">No Data Found</string>
    <string name="dc_operations">DC\nOperations</string>
    <string name="str_dc_operations">DC Operations</string>
    <string name="meter_change_details">METER CHANGE DETAILS</string>
    <string name="old_meter_closing_reading_status">Old Meter Closing Reading Status</string>
    <string name="old_meter_closing_reading_date">Old Meter Closing Reading Date</string>
    <string name="old_meter_closing_reading_kvah">Old Meter Closing Reading(KVAH)</string>
    <string name="old_meter_closing_reading_kwh">Old Meter Closing Reading (KWH)</string>
    <string name="bill_details">Bill Details</string>
    <string name="bill_last_details">Last Billed Readings</string>
    <string name="meter_mf">Meter MF</string>
    <string name="meter_details">Meter Details</string>
    <string name="dtr_code">DTR Code</string>
    <string name="sub_category">Sub-Category</string>
    <string name="ib_value">IB Value</string>
    <string name="ib">IB</string>
    <string name="ir_value">IR Value</string>
    <string name="ir">IR</string>
    <string name="iy_value">IY Value</string>
    <string name="iy">IY</string>
    <string name="bn_value">bn Value</string>
    <string name="bn">BN</string>
    <string name="yn_value">YN Value</string>
    <string name="yn">YN</string>
    <string name="rn_value">RN Value</string>
    <string name="rn">RN</string>
    <string name="br_value">BR Value</string>
    <string name="br">BR</string>
    <string name="yb_value">YB Value</string>
    <string name="yb">YB</string>
    <string name="ry_value">RY Value</string>
    <string name="ry">RY</string>
    <string name="submit">Submit</string>
    <string name="kwh">KWH</string>
    <string name="kwh_value">KWH Value</string>
    <string name="kvah_TXT">KVAH</string>
    <string name="kvah_value">KVAH Value</string>
    <string name="kvarh_lag_value">KVARH(Lag) Value</string>
    <string name="kvarh_lag">KVARH(Lag)</string>
    <string name="kvarh_lead">KVARH(Lead)</string>
    <string name="kvarh_lead_value">KVARH(Lead) Value</string>
    <string name="rmd">RMD</string>
    <string name="rmd_value">RMD Value</string>
    <string name="enter_the_incriminating_points_observed_at_the_time_of_inspection">Enter the Incriminating Points Observed at the time of Inspection</string>
    <string name="enter_percentage_error">Enter percentage Error</string>
    <string name="enter_percentage_error_value">Enter percentage Error Value</string>
    <string name="upload_image">Upload Image</string>
    <string name="choose_file">Choose File</string>
    <string name="enter_user_name">Enter User Name Details</string>
    <string name="user_name">User Name</string>
    <string name="user_otp">OTP</string>
    <string name="user_password">Password</string>
    <string name="user_cnf_password">Confirm Password</string>
    <string name="action_version">Version</string>
</resources>