<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:aelcRequestListActivity=".activities.MainActivity">
    <item
        android:id="@+id/action_update_profile"
        android:orderInCategory="100"
        android:title="@string/update_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_user"
        android:orderInCategory="100"
        android:title="@string/user_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_changepassword"
        android:orderInCategory="100"
        android:title="@string/action_changepassword"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_version"
        android:orderInCategory="100"
        android:title="@string/action_version"
        app:showAsAction="never" />
</menu>
