<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_margin="7dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/kwh"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_kwh"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/kwh_value"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingStart="@dimen/_7dp"
            android:textColor="#555"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_margin="7dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/kvah_TXT"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_kvah"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/kvah_value"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingStart="@dimen/_7dp"
            android:textColor="#555"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/_40dp"
    android:layout_margin="7dp"
    android:orientation="horizontal"
    android:weightSum="2">

    <TextView
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:text="@string/kvarh_lag"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:hint="@string/kvarh_lag_value"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:paddingStart="@dimen/_7dp"
        android:textColor="#555"
        android:textSize="14sp" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_margin="7dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/kvarh_lead"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/kvarh_lead_value"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingStart="@dimen/_7dp"
            android:textColor="#555"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_margin="7dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/rmd"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_rmd"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/rmd_value"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingStart="@dimen/_7dp"
            android:textColor="#555"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
