<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_incriminating_points_observed_at_the_time_of_inspection"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:minHeight="@dimen/_120dp"
        android:layout_marginTop="@dimen/_10dp"
        android:padding="@dimen/_7dp"
        android:textSize="@dimen/_14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:gravity="center"
        android:minHeight="@dimen/_40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_percentage_error"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/enter_percentage_error_value"
            android:imeOptions="actionNext"
            android:paddingStart="@dimen/_7dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/_10dp"
        android:text="@string/upload_image"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:background="@drawable/border"
            android:hint="@string/choose_file"
            android:imeOptions="actionNext"
            android:paddingEnd="@dimen/_50dp"
            android:paddingStart="@dimen/_7dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <ImageView
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:src="@drawable/ic_attachment"
            android:tint="@color/colorPrimary"
            android:padding="@dimen/_5dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/app_name"
            />
    </RelativeLayout>
</LinearLayout>