<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/enter_user_name"
        android:textStyle="bold"
        android:textSize="@dimen/_15sp"
        android:textColor="@android:color/white" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:minHeight="@dimen/_50dp">

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="@dimen/_25dp"
            android:layout_height="@dimen/_25dp"
            android:layout_margin="@dimen/_10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete_button" />
    </LinearLayout>


    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_below="@id/tv_title"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/user_name"
        android:inputType="textNoSuggestions"
        android:textSize="@dimen/_15sp"/>
    <EditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_below="@id/et_username"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/user_otp"
        android:inputType="textNoSuggestions"
        android:textSize="@dimen/_15sp"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_below="@id/et_otp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/user_password"
        android:inputType="textNoSuggestions"
        android:textSize="@dimen/_15sp"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/et_conf_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_below="@id/et_password"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/user_cnf_password"
        android:inputType="textNoSuggestions"
        android:textSize="@dimen/_15sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_conf_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_30dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:minHeight="@dimen/_35dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sp" />

</RelativeLayout>